--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@ckeditor/ckeditor5-build-decoupled-document": "^26.0.0",
     "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@toast-ui/editor": "^2.5.4",
-    "ant-design-vue": "^2.2.8",
+    "ant-design-vue": "^3.2.0",
     "axios": "^0.21.4",
     "echarts": "^4.9.0",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.3",
     "nprogress": "^0.2.0",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
