--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts": "^5.3.2",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.3",
     "nprogress": "^0.2.0",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.10",
